@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.7.7.3
   Resolve conflict files (cvs, svn...) (#1875129)
   Save line filter when edit box loses focus (#1875853)
+  Manual: Add instructions for conflict file resolving (#1876770)
   BugFix: Fix Quick Compare regression in 2.7.7.2 (#1872165)
   Bugfix: Clipped text in file saving error message (#1874854)
 
